--- a/index.html
+++ b/index.html
@@ -10,21 +10,50 @@
 </head>
 
 <body class="root">
+  <!--Секция header-->
+  <header class="header">
+    <nav>
+      <ul class="header__list">
+        <li>
+          <a class="header__list-item" href="#">Мечты</a>
+        </li>
+        <li>
+          <a class="header__list-item" href="#">Ожидания</a>
+        </li>
+        <li>
+          <a class="header__list-item" href="#">Реальность</a>
+        </li>
+      </ul>
+    </nav>
+    <a class="header__complain" href="#">Пожаловаться</a>
+  </header>
 
-  <header class="header"></header>
-  <section class="intro"></section>
+  <!--Секция intro-->
+  <section class="intro">
+    <div class="intro__text">
+      <p class="intro__subtitle">Куда я поеду</p>
+      <h1 class="intro__title">Куда я поеду сразу, как можно будет куда-то поехать</h1>
+    </div>
+    <div class="intro__container">
+      <img src="images/intro-image.jpeg" alt="Вид из окна самолёта" class="intro__image">
+    </div>
+  </section>
 
   <!--Секция places-->
   <section class="places">
     <article class="place">
-      <img src="./images/places-forest.jpeg" alt="Путешественник наблюдает за водопадом в густом зеленом лесу." class="place__image">
+      <img src="./images/places-forest.jpeg" alt="Путешественник наблюдает за водопадом в густом зеленом лесу."
+        class="place__image">
       <div class="place__text">
         <h2 class="place__title">Поеду в лес</h2>
-        <p class="place__paragraph">Лес&nbsp;&mdash; экологическая система, биоценоз, в&nbsp;которой главной жизненной формой являются
-                                    деревья.</p>
-        <p class="place__paragraph">Лес&nbsp;&mdash; составная часть природы, понятие &laquo;лес&raquo; можно рассматривать
-                                    на&nbsp;разных уровнях. В&nbsp;глобальном масштабе&nbsp;&mdash; это часть биосферы,
-                                    в&nbsp;локальном&nbsp;&mdash; это может быть насаждение. Леса занимают около трети площади суши.</p>
+        <p class="place__paragraph">Лес&nbsp;&mdash; экологическая система, биоценоз, в&nbsp;которой главной
+          жизненной
+          формой являются
+          деревья.</p>
+        <p class="place__paragraph">Лес&nbsp;&mdash; составная часть природы, понятие &laquo;лес&raquo; можно
+          рассматривать
+          на&nbsp;разных уровнях. В&nbsp;глобальном масштабе&nbsp;&mdash; это часть биосферы,
+          в&nbsp;локальном&nbsp;&mdash; это может быть насаждение. Леса занимают около трети площади суши.</p>
       </div>
     </article>
   </section>
@@ -36,4 +65,5 @@
   <footer class="footer"></footer>
 
 </body>
+
 </html>
