--- a/index.html
+++ b/index.html
@@ -12,68 +12,102 @@
 <body class="root">
 
   <header class="header"></header>
-  <section class="intro"></section>
 
-  <!--Секция places-->
-  <section class="places">
-    <article class="place">
-      <div class="place__image-container place__flex">
-        <img src="./images/places-forest.jpeg" alt="Путешественник наблюдает за водопадом в густом зеленом лесу." class="place__image">
-      </div>
-      <div class="place__text-container place__flex">
-        <h2 class="place__title">Поеду в&nbsp;лес</h2>
-        <div class="place__text">
-          <p class="place__paragraph">Лес&nbsp;&mdash; экологическая система, биоценоз, в&nbsp;которой
-                                      главной жизненной формой являются деревья.</p>
-          <p class="place__paragraph">Лес&nbsp;&mdash; составная часть природы, понятие &laquo;лес&raquo; можно
-                                      рассматривать на&nbsp;разных уровнях. В&nbsp;глобальном
-                                      масштабе&nbsp;&mdash; это часть биосферы, в&nbsp;локальном&nbsp;&mdash; это
-                                      может быть насаждение. Леса занимают около трети
-                                      площади суши.</p>
-        </div>
-      </div>
-    </article>
-    <article class="place">
-      <div class="place__image-container place__flex">
-        <img src="./images/places-mountains.jpeg" alt="Человек любуется заснеженным склоном горы." class="place__image place__flex">
-      </div>
-      <div class="place__text-container place__flex">
-        <h2 class="place__title">Поеду в&nbsp;горы</h2>
-        <div class="place__text">
-          <p class="place__paragraph">Горные системы занимают 64&nbsp;% поверхности Азии, 36&nbsp;%
-                                      &mdash; Северной Америки, 25&nbsp;%&nbsp;&mdash; Европы, 22&nbsp;%&nbsp;&mdash; Южной
-                                      Америки, 17&nbsp;%&nbsp;&mdash; Австралии и&nbsp;3&nbsp;%&nbsp;&mdash; Африки. В&nbsp;целом 24
-                                      % земной поверхности приходится на&nbsp;горы.&nbsp;10&nbsp;% всех
-                                      людей живёт на&nbsp;территории гор. В&nbsp;горах берёт своё
-                                      начало большинство рек Земли.</p>
-        </div>
-      </div>
-    </article>
-    <article class="place">
-      <div class="place__image-container place__flex">
-        <img src="./images/places-black-sea.jpeg" alt="Девушка любуется волнами во воемя заката." class="place__image place__image_horizontal place__flex">
-      </div>
-      <div class="place__text-container place__flex">
-        <h2 class="place__title">Поеду на&nbsp;Чёрное море</h2>
-        <div class="place__text">
-          <p class="place__paragraph">Я&nbsp;уплыву туда, где ни&nbsp;разу я&nbsp;не&nbsp;был, туда, где никто раньше не&nbsp;был.
-                                      Никто и&nbsp;никогда раньше не&nbsp;был, я уплыву. Я&nbsp;позову тебя смотреть
-                                      на&nbsp;синее небо и&nbsp;пить по капле синее небо, и&nbsp;падать в&nbsp;это синее небо,
-                                      я&nbsp;позову.</p>
-          <p class="place__paragraph">Уеду я&nbsp;на&nbsp;Чёрное-Чёрное море, на&nbsp;Чёрное-Чёрное море,&nbsp;на&nbsp;Чёрное-Чёрное море
-                                      уеду&nbsp;я. Уеду я&nbsp;на&nbsp;Чёрное-Чёрное море, на&nbsp;Чёрное-Чёрное море,
-                                      на&nbsp;Чёрное- Чёрное море.</p>
-          <p class="place__paragraph">Уеду&nbsp;я.</p>
-        </div>
-      </div>
-    </article>
-  </section>
+  <main class="content">
 
-  <!--Секция people-->
-  <section class="people"></section>
+    <section class="intro"></section>
+
+    <!--Секция places-->
+    <section class="places">
+      <article class="place">
+        <div class="place__image-container place__flex">
+          <img src="./images/places-forest.jpeg" alt="Путешественник наблюдает за водопадом в густом зеленом лесу." class="place__image">
+        </div>
+        <div class="place__text-container place__flex">
+          <h2 class="place__title">Поеду в&nbsp;лес</h2>
+          <div class="place__text">
+            <p class="place__paragraph">Лес&nbsp;&mdash; экологическая система, биоценоз, в&nbsp;которой
+                                        главной жизненной формой являются деревья.</p>
+            <p class="place__paragraph">Лес&nbsp;&mdash; составная часть природы, понятие &laquo;лес&raquo; можно
+                                        рассматривать на&nbsp;разных уровнях. В&nbsp;глобальном
+                                        масштабе&nbsp;&mdash; это часть биосферы, в&nbsp;локальном&nbsp;&mdash; это
+                                        может быть насаждение. Леса занимают около трети
+                                        площади суши.</p>
+          </div>
+        </div>
+      </article>
+      <article class="place">
+        <div class="place__image-container place__flex">
+          <img src="./images/places-mountains.jpeg" alt="Человек любуется заснеженным склоном горы." class="place__image place__flex">
+        </div>
+        <div class="place__text-container place__flex">
+          <h2 class="place__title">Поеду в&nbsp;горы</h2>
+          <div class="place__text">
+            <p class="place__paragraph">Горные системы занимают 64&nbsp;% поверхности Азии, 36&nbsp;%
+                                        &mdash; Северной Америки, 25&nbsp;%&nbsp;&mdash; Европы, 22&nbsp;%&nbsp;&mdash; Южной
+                                        Америки, 17&nbsp;%&nbsp;&mdash; Австралии и&nbsp;3&nbsp;%&nbsp;&mdash; Африки. В&nbsp;целом 24
+                                        % земной поверхности приходится на&nbsp;горы.&nbsp;10&nbsp;% всех
+                                        людей живёт на&nbsp;территории гор. В&nbsp;горах берёт своё
+                                        начало большинство рек Земли.</p>
+          </div>
+        </div>
+      </article>
+      <article class="place">
+        <div class="place__image-container place__flex">
+          <img src="./images/places-black-sea.jpeg" alt="Девушка любуется волнами во воемя заката." class="place__image place__image_horizontal place__flex">
+        </div>
+        <div class="place__text-container place__flex">
+          <h2 class="place__title">Поеду на&nbsp;Чёрное море</h2>
+          <div class="place__text">
+            <p class="place__paragraph">Я&nbsp;уплыву туда, где ни&nbsp;разу я&nbsp;не&nbsp;был, туда, где никто раньше не&nbsp;был.
+                                        Никто и&nbsp;никогда раньше не&nbsp;был, я уплыву. Я&nbsp;позову тебя смотреть
+                                        на&nbsp;синее небо и&nbsp;пить по капле синее небо, и&nbsp;падать в&nbsp;это синее небо,
+                                        я&nbsp;позову.</p>
+            <p class="place__paragraph">Уеду я&nbsp;на&nbsp;Чёрное-Чёрное море, на&nbsp;Чёрное-Чёрное море,&nbsp;на&nbsp;Чёрное-Чёрное море
+                                        уеду&nbsp;я. Уеду я&nbsp;на&nbsp;Чёрное-Чёрное море, на&nbsp;Чёрное-Чёрное море,
+                                        на&nbsp;Чёрное- Чёрное море.</p>
+            <p class="place__paragraph">Уеду&nbsp;я.</p>
+          </div>
+        </div>
+      </article>
+    </section>
+
+    <!--Секция people-->
+    <section class="people">
+      <p class="people__subtitle">люди</p>
+      <h2 class="people__title">Что говорят и говорили люди о путешествиях</h2>
+      <ul class="people__list">
+        <li class="people__list-item">
+          <h3 class="people__name">Иван Бунин</h3>
+          <p class="people__quote">Человека делают счастливым три вещи: любовь, интересная работа и возможность путешествовать.</p>
+        </li>
+        <li class="people__list-item">
+          <h3 class="people__name">Альбер Камю</h3>
+          <p class="people__quote">Путешествие как самая великая и серьезная наука помогает нам вновь обрести себя.</p>
+        </li>
+        <li class="people__list-item">
+          <h3 class="people__name">Норвежская пословица</h3>
+          <p class="people__quote">Лишь тот, кто странствует, открывает новые пути.</p>
+        </li>
+        <li class="people__list-item">
+          <h3 class="people__name">Мария Захарова</h3>
+          <p class="people__quote">В принципе зарубежная поездка – это серьезнейшее, ответственнейшее и очень рискованное предприятие.</p>
+        </li>
+      </ul>
+    </section>
+
+  </main>
 
   <!--Подвал сайта-->
-  <footer class="footer"></footer>
+  <div class="placeholder"></div>
+  <footer class="footer">
+    <div class="footer__grid">
+      <p class="footer__author">Kiss my Front-End</p>
+      <p class="footer__subtitle">команда</p>
+      <div class="footer__logo"></div>
+      <p class="footer__copyright">&copy;2022</p>
+    </div>
+  </footer>
 
 </body>
 </html>
