--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     <nav>
       <ul class="header__list">
         <li class="header__list-item">
-          <a class="header__link" href="#">Мечты</a>
+          <a class="header__link" href="#" target="_blank">Мечты</a>
         </li>
         <li class="header__list-item">
-          <a class="header__link" href="#">Ожидания</a>
+          <a class="header__link" href="#" target="_blank">Ожидания</a>
         </li>
         <li class="header__list-item">
-          <a class="header__link" href="#">Реальность</a>
+          <a class="header__link" href="#" target="_blank">Реальность</a>
         </li>
         <li class="header__list-item">
-          <a class="header__link" href="#">Пожаловаться</a>
+          <a class="header__link" href="#" target="_blank">Пожаловаться</a>
         </li>
       </ul>
     </nav>
@@ -32,66 +32,71 @@
 
   <main class="content">
 
-  <!--Секция intro-->
-  <section class="intro">
-    <div class="intro__text">
-      <p class="intro__subtitle">Куда я поеду</p>
-      <h1 class="intro__title">Куда я поеду сразу, как можно будет куда-то поехать</h1>
-    </div>
-    <div class="intro__container">
-      <img src="images/intro-image.jpeg" alt="Вид из окна самолёта" class="intro__image">
-    </div>
-  </section>
+    <!--Секция intro-->
+    <section class="intro">
+      <div class="intro__text">
+        <p class="intro__subtitle">Куда я поеду</p>
+        <h1 class="intro__title">Куда я поеду сразу, как можно будет куда-то поехать</h1>
+      </div>
+      <div class="intro__container">
+        <img src="images/intro-image.jpeg" alt="Вид из окна самолёта" class="intro__image">
+      </div>
+    </section>
 
     <!--Секция places-->
     <section class="places">
       <article class="place">
         <div class="place__image-container place__flex">
-          <img src="./images/places-forest.jpeg" alt="Путешественник наблюдает за водопадом в густом зеленом лесу." class="place__image">
+          <img src="./images/places-forest.jpeg" alt="Путешественник наблюдает за водопадом в густом зеленом лесу."
+            class="place__image">
         </div>
         <div class="place__text-container place__flex">
           <h2 class="place__title">Поеду в&nbsp;лес</h2>
           <div class="place__text">
             <p class="place__paragraph">Лес&nbsp;&mdash; экологическая система, биоценоз, в&nbsp;которой
-                                        главной жизненной формой являются деревья.</p>
+              главной жизненной формой являются деревья.</p>
             <p class="place__paragraph">Лес&nbsp;&mdash; составная часть природы, понятие &laquo;лес&raquo; можно
-                                        рассматривать на&nbsp;разных уровнях. В&nbsp;глобальном
-                                        масштабе&nbsp;&mdash; это часть биосферы, в&nbsp;локальном&nbsp;&mdash; это
-                                        может быть насаждение. Леса занимают около трети
-                                        площади суши.</p>
+              рассматривать на&nbsp;разных уровнях. В&nbsp;глобальном
+              масштабе&nbsp;&mdash; это часть биосферы, в&nbsp;локальном&nbsp;&mdash; это
+              может быть насаждение. Леса занимают около трети
+              площади суши.</p>
           </div>
         </div>
       </article>
       <article class="place">
         <div class="place__image-container place__flex">
-          <img src="./images/places-mountains.jpeg" alt="Человек любуется заснеженным склоном горы." class="place__image place__flex">
+          <img src="./images/places-mountains.jpeg" alt="Человек любуется заснеженным склоном горы."
+            class="place__image place__flex">
         </div>
         <div class="place__text-container place__flex">
           <h2 class="place__title">Поеду в&nbsp;горы</h2>
           <div class="place__text">
             <p class="place__paragraph">Горные системы занимают 64&nbsp;% поверхности Азии, 36&nbsp;%
-                                        &mdash; Северной Америки, 25&nbsp;%&nbsp;&mdash; Европы, 22&nbsp;%&nbsp;&mdash; Южной
-                                        Америки, 17&nbsp;%&nbsp;&mdash; Австралии и&nbsp;3&nbsp;%&nbsp;&mdash; Африки. В&nbsp;целом 24
-                                        % земной поверхности приходится на&nbsp;горы.&nbsp;10&nbsp;% всех
-                                        людей живёт на&nbsp;территории гор. В&nbsp;горах берёт своё
-                                        начало большинство рек Земли.</p>
+              &mdash; Северной Америки, 25&nbsp;%&nbsp;&mdash; Европы, 22&nbsp;%&nbsp;&mdash; Южной
+              Америки, 17&nbsp;%&nbsp;&mdash; Австралии и&nbsp;3&nbsp;%&nbsp;&mdash; Африки. В&nbsp;целом 24
+              % земной поверхности приходится на&nbsp;горы.&nbsp;10&nbsp;% всех
+              людей живёт на&nbsp;территории гор. В&nbsp;горах берёт своё
+              начало большинство рек Земли.</p>
           </div>
         </div>
       </article>
       <article class="place">
         <div class="place__image-container place__flex">
-          <img src="./images/places-black-sea.jpeg" alt="Девушка любуется волнами во воемя заката." class="place__image place__image_horizontal place__flex">
+          <img src="./images/places-black-sea.jpeg" alt="Девушка любуется волнами во воемя заката."
+            class="place__image place__image_horizontal place__flex">
         </div>
         <div class="place__text-container place__flex">
           <h2 class="place__title">Поеду на&nbsp;Чёрное море</h2>
           <div class="place__text">
-            <p class="place__paragraph">Я&nbsp;уплыву туда, где ни&nbsp;разу я&nbsp;не&nbsp;был, туда, где никто раньше не&nbsp;был.
-                                        Никто и&nbsp;никогда раньше не&nbsp;был, я уплыву. Я&nbsp;позову тебя смотреть
-                                        на&nbsp;синее небо и&nbsp;пить по капле синее небо, и&nbsp;падать в&nbsp;это синее небо,
-                                        я&nbsp;позову.</p>
-            <p class="place__paragraph">Уеду я&nbsp;на&nbsp;Чёрное-Чёрное море, на&nbsp;Чёрное-Чёрное море,&nbsp;на&nbsp;Чёрное-Чёрное море
-                                        уеду&nbsp;я. Уеду я&nbsp;на&nbsp;Чёрное-Чёрное море, на&nbsp;Чёрное-Чёрное море,
-                                        на&nbsp;Чёрное- Чёрное море.</p>
+            <p class="place__paragraph">Я&nbsp;уплыву туда, где ни&nbsp;разу я&nbsp;не&nbsp;был, туда, где никто раньше
+              не&nbsp;был.
+              Никто и&nbsp;никогда раньше не&nbsp;был, я уплыву. Я&nbsp;позову тебя смотреть
+              на&nbsp;синее небо и&nbsp;пить по капле синее небо, и&nbsp;падать в&nbsp;это синее небо,
+              я&nbsp;позову.</p>
+            <p class="place__paragraph">Уеду я&nbsp;на&nbsp;Чёрное-Чёрное море, на&nbsp;Чёрное-Чёрное
+              море,&nbsp;на&nbsp;Чёрное-Чёрное море
+              уеду&nbsp;я. Уеду я&nbsp;на&nbsp;Чёрное-Чёрное море, на&nbsp;Чёрное-Чёрное море,
+              на&nbsp;Чёрное- Чёрное море.</p>
             <p class="place__paragraph">Уеду&nbsp;я.</p>
           </div>
         </div>
@@ -105,7 +110,8 @@
       <ul class="people__list">
         <li class="people__list-item">
           <h3 class="people__name">Иван Бунин</h3>
-          <p class="people__quote">Человека делают счастливым три вещи: любовь, интересная работа и возможность путешествовать.</p>
+          <p class="people__quote">Человека делают счастливым три вещи: любовь, интересная работа и возможность
+            путешествовать.</p>
         </li>
         <li class="people__list-item">
           <h3 class="people__name">Альбер Камю</h3>
@@ -117,7 +123,8 @@
         </li>
         <li class="people__list-item">
           <h3 class="people__name">Мария Захарова</h3>
-          <p class="people__quote">В принципе зарубежная поездка – это серьезнейшее, ответственнейшее и очень рискованное предприятие.</p>
+          <p class="people__quote">В принципе зарубежная поездка – это серьезнейшее, ответственнейшее и очень
+            рискованное предприятие.</p>
         </li>
       </ul>
     </section>
